# mdpr

./: .hgignore  BUILD  CMakeLists.txt  Doxyfile  Mduel.sln  Mduel.vcproj  ProjectHome.md  bubble.cpp  bubble.hpp  conf  config.lua  effect.cpp  effect.hpp  game.cpp  game.h  game.hpp  installer.nsi  level.cpp  level.hpp  main.cpp  main.h  main.hpp  masterServer.properties  masterServer.sln  mdpr.properties  mdpr.sln  mdpr.vcproj  menu.cpp  menu.h  menu.hpp  player.cpp  player.h  player.hpp  server.properties  server.sln  video.cpp  video.h  video.hpp
Models/: head.skp  idle.skp  platform.skp  run0.skp  run1.skp  run2.skp
data/: Options.layout  Profiles.layout  ServerBrowser.layout  mdpr.layout
data/mdpr/gui/: gui.xml  menuMain.xml  menuOptions.xml  menuProfile.xml
data/profiles/: profiles.properties
engine/: .cdtbuild  engine.vcproj
engine/include/engine/: animation.hpp  collision.hpp  engine.hpp  engineAll.hpp  engineLib.hpp  graphics.hpp  input.hpp  mass.hpp  movement.hpp  network.hpp  packetHandlers.hpp  packets.hpp  sprite.hpp  spriteAnimation.hpp  spriteCollision.hpp  spriteInput.hpp  spriteInterface.hpp  spriteManager.hpp  spriteMass.hpp  spriteMovement.hpp  window.hpp
engine/src/: animation.cpp  collision.cpp  engine.cpp  graphics.cpp  input.cpp  mass.cpp  movement.cpp  network.cpp  packetHandlers.cpp  sprite.cpp  spriteAnimation.cpp  spriteCollision.cpp  spriteInput.cpp  spriteInterface.cpp  spriteManager.cpp  spriteMass.cpp  spriteMovement.cpp  window.cpp
game/: .cdtbuild  .project  CMakeLists.txt  game.cbp  game.depend  game.layout  game.vcproj  version.hpp  version.rc
game/include/: MDPRApplication.hpp  MDPRGame.hpp  dataTypes.hpp  engine.hpp  event.hpp  network.hpp  networkClient.hpp  networkServer.hpp  packetHandlers.hpp  spriteManager.hpp  window.hpp
game/include/game/: player.hpp
game/src/: MDPRApplication.cpp  MDPRApplication.hpp  MDPRGame.cpp  MDPRGame.hpp  WebViewListener.cpp  WebViewListener.hpp  crc.cpp  crc.hpp  engine.cpp  engine.hpp  enumerations.hpp  event.cpp  graphics.cpp  helpers.cpp  helpers.hpp  main.cpp  network.cpp  networkServer.cpp  packetHandlers.cpp  player.cpp  window.cpp
game/src/menu/: ListItem.hpp  button.cpp  button.hpp  controlChangeButton.cpp  controlChangeButton.hpp  filteredTextField.cpp  filteredTextField.hpp  menuControls.cpp  menuControls.hpp  menuGeneric.cpp  menuGeneric.hpp  menuInGame.cpp  menuInGame.hpp  menuMain.cpp  menuMain.hpp  menuManager.cpp  menuManager.hpp  menuOptions.cpp  menuOptions.hpp  menuProfile.cpp  menuProfile.hpp  menuServerBrowser.cpp  menuServerBrowser.hpp  serverListModel.cpp  serverListModel.hpp
game/src/menu/GUI/: button.cpp  button.hpp  clickable.cpp  clickable.hpp  input.cpp  input.hpp  listBox.cpp  listBox.hpp  text.cpp  text.hpp  textBox.cpp  textBox.hpp  toggleBox.cpp  toggleBox.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
game/src/network/: network.cpp  network.hpp  networkClient.cpp  networkClient.hpp  networkServer.cpp  networkServer.hpp  packets.hpp
game/src/powerup/: TNT.cpp  TNT.hpp  chute.hpp  death.cpp  genericPowerUp.hpp  grenade.cpp  gun.cpp  gun.hpp  invisibility.cpp  powerUpManager.cpp  powerUpManager.hpp  puck.hpp  warp.cpp  warp.hpp
game/src/profile/: Profile.cpp  Profile.hpp  ProfileManager.cpp  ProfileManager.hpp
game/src/sprite/: animation.cpp  animation.hpp  bubble.cpp  bubble.hpp  clientSprite.cpp  clientSprite.hpp  clientSpriteManager.cpp  clientSpriteManager.hpp  deathArea.cpp  deathArea.hpp  effect.cpp  effect.hpp  effectManager.cpp  effectManager.hpp  genericSprite.cpp  genericSprite.hpp  imageManager.cpp  imageManager.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  powerup.cpp  powerup.hpp  selectionArea.cpp  selectionArea.hpp  spriteCollision.cpp  spriteCollision.hpp  spriteManager.cpp  spriteManager.hpp
include/: Bubble.hpp  Effect.hpp  GameManager.hpp  Mass.hpp  Player.hpp  Sprite.hpp  SpriteManager.hpp  Weapon.hpp  WeaponManager.hpp
masterServer/: CMakeLists.txt  masterServer.vcproj
masterServer/src/: RequestHandleFunctions.cpp  RequestHandleFunctions.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestHandlerFactory.cpp  RequestHandlerFactory.hpp  main.cpp  networkMasterServer.cpp  networkMasterServer.hpp
new/: Doxyfile  mdpr.sln  mdpr.vcproj
new/include/: Bubble.hpp  gameManager.hpp  mass.hpp  player.hpp  sprite.hpp  spriteManager.hpp
new/src/: Bubble.cpp  GameManager.cpp  Mass.cpp  Player.cpp  SpriteManager.cpp  main.cpp  sprite.cpp
newEngine/: game.sln
newEngine/engine/: dll.def  engine.vcproj
newEngine/engine/src/: animaiton.cpp  animation.cpp  collision.cpp  (+6 more)
newEngine/game/: game.vcproj
old/: Mduel.vcproj  SDL_rotozoom.c  bubble.hpp  effect.hpp  game.cpp  level.cpp  level.hpp  main.cpp  menu.cpp  player.cpp  video.cpp
oldCode/: config.lua  mdpr.vcproj
oldCode/include/: Effect.hpp  GameManager.hpp  Player.hpp  WeaponManager.hpp
oldCode/src/: Mass.cpp  SpriteManager.cpp  Weapon.cpp  WeaponManager.cpp
server/: CMakeLists.txt  server.vcproj
server/src/: main.cpp
server/src/network/: PlayerConnection.cpp  PlayerConnection.hpp  networkServer.cpp  networkServer.hpp
server/src/powerup/: TNT.cpp  TNT.hpp  boots.cpp  boots.hpp  chute.cpp  chute.hpp  death.cpp  death.hpp  genericPowerUp.cpp  genericPowerUp.hpp  grenade.cpp  grenade.hpp  gun.cpp  gun.hpp  hook.cpp  hook.hpp  invisibility.cpp  invisibility.hpp  mine.cpp  mine.hpp  powerUpManager.cpp  powerUpManager.hpp  puck.cpp  puck.hpp  volts.cpp  volts.hpp  warp.cpp  warp.hpp
server/src/sprite/: animation.cpp  animation.hpp  bubble.cpp  bubble.hpp  effect.cpp  effect.hpp  effectManager.cpp  effectManager.hpp  genericSprite.cpp  genericSprite.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  powerup.cpp  powerup.hpp  selectionArea.cpp  selectionArea.hpp  spriteCollision.cpp  spriteCollision.hpp  spriteManager.cpp  spriteManager.hpp
src/: Bubble.cpp  Effect.cpp  GameManager.cpp  Mass.cpp  Player.cpp  Sprite.cpp  SpriteManager.cpp  WeaponManager.cpp  main.cpp
tools/: tools.sln
tools/packetGenerator/: main.cpp  packetGenerator.vcproj
(+40 files in other folders)
